Improved testing coverage for service level