@@ -2,21 +2,23 @@ package comics.logic;
 
 import comics.commands.PackCommand;
 import comics.utils.Tools.TestLevel;
+import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.EnumSource;
+import shell.OSDetection;
 
 import java.io.File;
+import java.nio.file.Files;
 import java.util.Arrays;
 import java.util.HashMap;
+import java.util.List;
 
 import static comics.utils.Tools.TestLevel.COMMAND;
 import static comics.utils.Tools.TestLevel.SERVICE;
 import static comics.utils.Tools.copyResource;
 import static comics.utils.Tools.md5;
 import static comics.utils.Tools.runTest;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 
 public class TestPack {
 
@@ -39,7 +41,7 @@ public class TestPack {
             )) copyResource("/uncompressed/" + s, new File(childDirectory, s));
             // Remember the directory
             var originalData = new HashMap<String, String>();
-            for (File f: childDirectory.listFiles()) {
+            for (var f: childDirectory.listFiles()) {
                 originalData.put(f.getName(), md5(f));
             }
             if (level == SERVICE) {
@@ -56,11 +58,11 @@ public class TestPack {
             assertFalse(childDirectory.exists());
             // Extract and check
             new CompressionService().decompressComic(comicFile);
-            File newChildDirectory = new File(directory, new NameConverter().normalizeFileName(fileName));
+            var newChildDirectory = new File(directory, new NameConverter().normalizeFileName(fileName));
             assertFalse(comicFile.exists());
             assertTrue(newChildDirectory.exists());
             assertEquals(originalData.keySet().size(), newChildDirectory.listFiles().length);
-            for (File f: newChildDirectory.listFiles()) {
+            for (var f: newChildDirectory.listFiles()) {
                 assertEquals(originalData.get(f.getName()), md5(f));
             }
         });
@@ -74,7 +76,7 @@ public class TestPack {
             var childDirectory = new File(directory, fileName);
             childDirectory.mkdirs();
             // Populate the directory
-            for (var s: Arrays.asList(
+            List.of(
                 "foo.txt",
                 "bar.txt",
                 "baz.txt",
@@ -82,10 +84,10 @@ public class TestPack {
                 "right.jpg",
                 "down.jpg",
                 "left.jpg"
-            )) copyResource("/uncompressed/" + s, new File(childDirectory, s));
+            ).forEach(s -> copyResource("/uncompressed/" + s, new File(childDirectory, s)));
             // Remember the directory
             var originalData = new HashMap<String, String>();
-            for (File f: childDirectory.listFiles()) {
+            for (var f: childDirectory.listFiles()) {
                 originalData.put(f.getName(), md5(f));
             }
             if (level == SERVICE) {
@@ -98,7 +100,7 @@ public class TestPack {
             }
             var comicFile = new File(directory, new NameConverter().normalizeFileName(fileName+ ".cbz"));
             assertTrue(comicFile.exists());
-            File newChildDirectory = new File(directory, new NameConverter().normalizeFileName(fileName));
+            var newChildDirectory = new File(directory, new NameConverter().normalizeFileName(fileName));
             assertFalse(newChildDirectory.exists());
             // Extract and check
             new CompressionService().decompressComic(comicFile);
@@ -109,7 +111,7 @@ public class TestPack {
                 newChildDirectory.listFiles().length
             );
             assertTrue(Arrays.stream(newChildDirectory.listFiles()).filter(s -> s.getName().endsWith("txt")).toList().isEmpty());
-            for (File f: newChildDirectory.listFiles()) {
+            for (var f: newChildDirectory.listFiles()) {
                 assertEquals(originalData.get(f.getName()), md5(f));
             }
         });
@@ -123,7 +125,7 @@ public class TestPack {
             var childDirectory = new File(directory, fileName);
             childDirectory.mkdirs();
             // Populate the directory
-            for (var s: Arrays.asList(
+            List.of(
                 "foo.txt",
                 "bar.txt",
                 "baz.txt",
@@ -131,7 +133,7 @@ public class TestPack {
                 "right.jpg",
                 "down.jpg",
                 "left.jpg"
-            )) copyResource("/uncompressed/" + s, new File(childDirectory, s));
+            ).forEach(s -> copyResource("/uncompressed/" + s, new File(childDirectory, s)));
             // Remember the directory
             var originalData = new HashMap<String, String>();
             for (File f: childDirectory.listFiles()) {
@@ -152,6 +154,24 @@ public class TestPack {
             new CompressionService().decompressComic(comicFile);
             assertFalse(comicFile.exists());
             // Nothing created for an empty 7z
+        });
+    }
+
+    @Test
+    public void testServiceErrors() {
+        runTest((File directory) -> {
+            var service = new CompressionService();
+            assertThrows(CompressionException.class, () -> service.compressComic(null));
+            assertThrows(CompressionException.class, () -> service.compressComic(new File("does not exist")));
+            // Must be a directory
+            var realFile = new File(directory, "realFile");
+            realFile.createNewFile();
+            assertThrows(CompressionException.class, () -> service.compressComic(realFile));
+            if (!OSDetection.isWindows()) {
+                var symlink = new File(directory, "symlink");
+                Files.createSymbolicLink(symlink.toPath(), realFile.toPath());
+                assertThrows(CompressionException.class, () -> service.compressComic(symlink));
+            }
         });
     }
 }
